--- a/index.html
+++ b/index.html
@@ -95,69 +95,51 @@
 
     <div id="modal">
         <p id="modal-message">Message</p>
-        <button id="increase-btn" class="btn">Increase Motivation</button>
-        <button id="decrease-btn" class="btn">Decrease Motivation</button>
+        <button id="first-btn" class="btn">Option 1</button>
+        <button id="second-btn" class="btn">Option 2</button>
     </div>
 
     <script>
-        let bg; // Variable to store the background image
-        let motivation = 5; // Start motivation at 5
+        let bg;
+        let motivation = 5;
         let areas = [
-            {x: 198, y: 543, w: 240, h: 320, message: "You clicked on Character 1!", visible: true},
-            {x: 575, y: 425, w: 263, h: 448, message: "Character 2 says hi!", visible: true},
-            {x: 949, y: 417, w: 141, h: 298, message: "Character 3 is intrigued.", visible: true},
-            {x: 1106, y: 544, w: 125, h: 171, message: "Character 4 is mysterious.", visible: true},
-            {x: 1253, y: 515, w: 164, h: 342, message: "Character 5 looks strong.", visible: true},
-            {x: 635, y: 270, w: 220, h: 96, message: "This path leads somewhere unknown.", visible: true},
-            {x: 700, y: 50, w: 65, h: 50, message: "This path leads somewhere unknown.", visible: true},
-            {x: 445, y: 425, w: 125, h: 165, message: "Storefront 1 has goods for sale.", visible: true},
-            {x: 1000, y: 95, w: 100, h: 250, message: "Storefront 2 is closed.", visible: true},
-            {x: 500, y: 315, w: 130, h: 75, message: "Storefront 3 is welcoming you.", visible: true}
+            {x: 198, y: 543, w: 240, h: 320, message: "You clicked on Character 1!", increaseText: "Motivate Yourself", decreaseText: "Doubt Yourself", visible: true},
+            {x: 575, y: 425, w: 263, h: 448, message: "Character 2 says hi!", increaseText: "Embrace Challenge", decreaseText: "Take a Break", visible: true},
+            {x: 949, y: 417, w: 141, h: 298, message: "Character 3 is intrigued.", increaseText: "Step Forward", decreaseText: "Hesitate", visible: true},
+            {x: 1106, y: 544, w: 125, h: 171, message: "Character 4 is mysterious.", increaseText: "Investigate", decreaseText: "Back Away", visible: true},
+            {x: 1253, y: 515, w: 164, h: 342, message: "Character 5 looks strong.", increaseText: "Engage", decreaseText: "Avoid", visible: true},
+            {x: 635, y: 270, w: 220, h: 96, message: "This path leads somewhere unknown.", increaseText: "Explore", decreaseText: "Retreat", visible: true},
+            {x: 700, y: 50, w: 65, h: 50, message: "A high vantage point.", increaseText: "Climb", decreaseText: "Stay Grounded", visible: true},
+            {x: 445, y: 425, w: 125, h: 165, message: "Storefront 1 has goods for sale.", increaseText: "Browse", decreaseText: "Ignore", visible: true},
+            {x: 1000, y: 95, w: 100, h: 250, message: "Storefront 2 is closed.", increaseText: "Knock", decreaseText: "Walk Away", visible: true},
+            {x: 500, y: 315, w: 130, h: 75, message: "Storefront 3 is welcoming you.", increaseText: "Enter", decreaseText: "Decline", visible: true}
         ];
         let isModalOpen = false;
 
         function preload() {
-            bg = loadImage('background.png'); // Load the background image
+            bg = loadImage('background.png');
         }
 
         function setup() {
             createCanvas(1500, 900);
 
-            // Show the opening modal on game start
             document.getElementById('opening-modal').style.display = 'flex';
             isModalOpen = true;
 
-            // Start button closes the opening modal
             document.getElementById('start-btn').onclick = function() {
                 document.getElementById('opening-modal').style.display = 'none';
                 isModalOpen = false;
             };
-
-            // Increase button for motivation
-            document.getElementById('increase-btn').onclick = function() {
-                updateMotivation(1);
-                closeModal();
-            };
-
-            // Decrease button for motivation
-            document.getElementById('decrease-btn').onclick = function() {
-                updateMotivation(-1);
-                closeModal();
-            };
         }
 
         function draw() {
-            background(bg); // Display the background image
-
-            // Update motivation bar fill width and text label
+            background(bg);
             updateMotivationDisplay();
 
-            // Draw transparent rectangles for interactive areas
             areas.forEach(area => {
                 if (area.visible) drawRectangle(area, [255, 255, 255, 50]);
             });
 
-            // Highlight rectangles on hover
             areas.forEach(area => {
                 if (area.visible && isMouseOverRectangle(area)) drawRectangle(area, [255, 255, 255, 100]);
             });
@@ -175,20 +157,33 @@
         }
 
         function mousePressed() {
-            // Ignore clicks when a modal is open
             if (isModalOpen) return;
 
-            // Check if any area is clicked
             areas.forEach(area => {
                 if (area.visible && isMouseOverRectangle(area)) {
                     showMessage(area);
-                    area.visible = false; // Make the area disappear after interaction
+                    area.visible = false;
                 }
             });
         }
 
         function showMessage(area) {
             document.getElementById('modal-message').innerText = area.message;
+            let increaseFirst = Math.random() < 0.5;
+
+            document.getElementById('first-btn').innerText = increaseFirst ? area.increaseText : area.decreaseText;
+            document.getElementById('second-btn').innerText = increaseFirst ? area.decreaseText : area.increaseText;
+
+            document.getElementById('first-btn').onclick = function() {
+                updateMotivation(increaseFirst ? 1 : -1);
+                closeModal();
+            };
+
+            document.getElementById('second-btn').onclick = function() {
+                updateMotivation(increaseFirst ? -1 : 1);
+                closeModal();
+            };
+
             document.getElementById('modal').style.display = 'flex';
             isModalOpen = true;
         }
@@ -199,14 +194,12 @@
         }
 
         function updateMotivation(change) {
-            motivation = Math.min(10, Math.max(0, motivation + change)); // Keep motivation within 0-10
+            motivation = Math.min(10, Math.max(0, motivation + change));
             updateMotivationDisplay();
         }
 
         function updateMotivationDisplay() {
-            // Update the width of the motivation fill bar
             document.getElementById('motivation-fill').style.width = (motivation * 10) + "%";
-            // Update the motivation label text
             document.getElementById('motivation-label').innerText = `Motivation: ${motivation}/10`;
         }
     </script>
